# artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,7 @@ import lotofacilRouter from "./lotofacil";
 import quinaRouter from "./quina";
 import lotomaniaRouter from "./lotomania";
 import timemaniaRouter from "./timemania";
+import diadesorteRouter from "./diadesorte";
 import adminRouter from "./admin";
 
 const router: IRouter = Router();
@@ -17,6 +18,7 @@ router.use(lotofacilRouter);
 router.use(quinaRouter);
 router.use(lotomaniaRouter);
 router.use(timemaniaRouter);
+router.use(diadesorteRouter);
 router.use(adminRouter);
 
 export default router;
